syntax = "proto3";

option go_package = ".;cmd0x352";

message DelImgReq {
  int64 srcUin = 1;
  int64 dstUin = 2;
  int32 reqTerm = 3;
  int32 reqPlatformType = 4;
  int32 buType = 5;
  bytes buildVer = 6;
  bytes fileResid = 7;
  int32 picWidth = 8;
  int32 picHeight = 9;
}
message DelImgRsp {
  int32 result = 1;
  bytes failMsg = 2;
  bytes fileResid = 3;
}
message GetImgUrlReq {
  int64 srcUin = 1;
  int64 dstUin = 2;
  bytes fileResid = 3;
  int32 urlFlag = 4;
  int32 urlType = 6;
  int32 reqTerm = 7;
  int32 reqPlatformType = 8;
  int32 srcFileType = 9;
  int32 innerIp = 10;
  bool boolAddressBook = 11;
  int32 buType = 12;
  bytes buildVer = 13;
  int32 picUpTimestamp = 14;
  int32 reqTransferType = 15;
}
message GetImgUrlRsp {
  bytes fileResid = 1;
  int32 clientIp = 2;
  int32 result = 3;
  bytes failMsg = 4;
  bytes bytesThumbDownUrl = 5;
  bytes bytesOriginalDownUrl = 6;
  D352ImgInfo msgImgInfo = 7;
  repeated int32 uint32DownIp = 8;
  repeated int32 uint32DownPort = 9;
  bytes thumbDownPara = 10;
  bytes originalDownPara = 11;
  bytes downDomain = 12;
  bytes bytesBigDownUrl = 13;
  bytes bigDownPara = 14;
  bytes bigThumbDownPara = 15;
  int32 httpsUrlFlag = 16;
  repeated IPv6Info msgDownIp6 = 26;
  bytes clientIp6 = 27;
}
message D352ImgInfo {
  bytes fileMd5 = 1;
  int32 fileType = 2;
  int64 fileSize = 3;
  int32 fileWidth = 4;
  int32 fileHeight = 5;
  int64 fileFlag = 6;
  int32 fileCutPos = 7;
}
message IPv6Info {
  bytes ip6 = 1;
  int32 port = 2;
}
message ReqBody {
  int32 subcmd = 1;
  repeated D352TryUpImgReq msgTryupImgReq = 2;
  repeated GetImgUrlReq msgGetimgUrlReq = 3;
  repeated DelImgReq msgDelImgReq = 4;
  int32 netType = 10;
}
message RspBody {
  int32 subcmd = 1;
  repeated TryUpImgRsp msgTryupImgRsp = 2;
  repeated GetImgUrlRsp msgGetimgUrlRsp = 3;
  bool boolNewBigchan = 4;
  repeated DelImgRsp msgDelImgRsp = 5;
  string failMsg = 10;
}
message D352TryUpImgReq {
  int32 srcUin = 1;
  int32 dstUin = 2;
  int32 fileId = 3;
  bytes fileMd5 = 4;
  int32 fileSize = 5;
  string filename = 6;
  int32 srcTerm = 7;
  int32 platformType = 8;
  int32 innerIP = 9;
  int32 addressBook = 10;
  int32 retry = 11;
  int32 buType = 12;
  int32 imgOriginal = 13;
  int32 imgWidth = 14;
  int32 imgHeight = 15;
  int32 imgType = 16;
  string buildVer = 17;
  bytes fileIndex = 18;
  int32 fileStoreDays = 19;
  int32 stepFlag = 20;
  int32 rejectTryFast = 21;
  int32 srvUpload = 22;
  bytes transferUrl = 23;
}
message TryUpImgRsp {
  int64 fileId = 1;
  int32 clientIp = 2;
  int32 result = 3;
  string failMsg = 4;
  bool boolFileExit = 5;
  D352ImgInfo msgImgInfo = 6;
  repeated int32 uint32UpIp = 7;
  repeated int32 uint32UpPort = 8;
  bytes upUkey = 9;
  string upResid = 10;
  string upUuid = 11;
  int64 upOffset = 12;
  int64 blockSize = 13;
  bytes encryptDstip = 14;
  int32 roamdays = 15;
  repeated IPv6Info msgUpIp6 = 26;
  bytes clientIp6 = 27;
  bytes thumbDownPara = 60;
  bytes originalDownPara = 61;
  bytes downDomain = 62;
  bytes bigDownPara = 64;
  bytes bigThumbDownPara = 65;
  int32 httpsUrlFlag = 66;
  TryUpInfo4Busi msgInfo4busi = 1001;
}
message TryUpInfo4Busi {
  bytes fileResid = 1;
  bytes downDomain = 2;
  bytes thumbDownUrl = 3;
  bytes originalDownUrl = 4;
  bytes bigDownUrl = 5;
}
    